--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vestis</title>
     <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/ui/lib/fjsc/src/fjs-components.css">
     <link rel="stylesheet" href="/styles/fonts.css">
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/classes.css">
