switch build system.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- Material Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
 
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/ui/lib/fjsc/src/fjs-components.css">
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="stylesheet" href="/styles/classes.css">
+    <link rel="stylesheet" href="/src/styles/reset.css">
+    <link rel="stylesheet" href="/src/ui/lib/fjsc/src/fjs-components.css">
+    <link rel="stylesheet" href="/src/styles/index.css">
+    <link rel="stylesheet" href="/src/styles/classes.css">
     <script type="module" src="/src/ui/index.ts"></script>
 </head>
 <body>
